add button to submit answers

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --primaryColor: #fca311;
+  --primaryColor: #d8890a;
   --mainWhite: #fff;
   --offWhite: #e5e5e5;
   --mainBlack: #222;
