--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,13 +7,25 @@
   flex-direction: column;
 }
 
+.home-container h2 {
+  font-size: 2.4em;
+  border-bottom: var(--mainBlack) solid 1px;
+}
+
 .topic-math {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 1.3em;
+  margin-top: 1em;
 }
 
 .topic-buttons a {
   text-decoration: none;
   color: black;
+  font-size: 1.2em;
+}
+
+.topic-buttons a:hover {
+  text-shadow: #ffffffbd 0px 0px 4px;
 }
